--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -1,18 +1,19 @@
-.active,
-.nuxt-link-active {
-    .main-nav .navigation & {
-        position: relative;
-    
-        &:after {
-            position: absolute;
-            top: 100%;
-            left: 0;
-            display: block;
-            width: 100%;
-            height: 3px;
-            margin-top: 5px;
-            background: linear-gradient($gradient);
-            content: "";
+.main-nav {
+    .navigation {
+        .nuxt-link-active {
+            position: relative;
+
+            &:after {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                display: block;
+                width: 100%;
+                height: 3px;
+                margin-top: 5px;
+                background: linear-gradient($gradient);
+                content: "";
+            }
         }
     }
 }
