--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -1,37 +1,33 @@
 .main-nav {
-    .navigation {
-        .nuxt-link-active {
-            position: relative;
+    .nuxt-link-active {
+        position: relative;
 
-            span {
-                position: absolute;
-                top: 100%;
-                left: 0;
-                display: block;
-                width: 100%;
-                height: 3px;
-                margin-top: 5px;
-                background: linear-gradient($gradient);
-            }
+        .border--active {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            display: block;
+            width: 100%;
+            height: 3px;
+            margin-top: 5px;
+            background: linear-gradient($gradient);
         }
     }
 }
 
-.sub-nav {
-    .scrollactive-item {
-        &.is-active {
-            position: relative;
+.scrollactive-item {
+    &.is-active {
+        position: relative;
 
-            span {
-                position: absolute;
-                top: 100%;
-                left: 0;
-                display: block;
-                width: 100%;
-                height: 3px;
-                margin-top: 5px;
-                background: linear-gradient($gradient);
-            }
+        .border--active {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            display: block;
+            width: 100%;
+            height: 3px;
+            margin-top: 5px;
+            background: linear-gradient($gradient);
         }
     }
 }
