--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -31,4 +31,11 @@
             max-width: 100%;
         }
     }
+
+    &.repertory h6 {
+        margin-bottom: 0.5rem;
+        margin-top: .5rem;
+        font-weight: normal;
+        font-size: .8rem
+    }
 }
